deploy/manifests/stunner-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stunner-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stunner-gateway
  namespace: stunner-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stunner-gateway
  template:
    metadata:
      labels:
        app: stunner-gateway
    spec:
      shareProcessNamespace: true
      serviceAccountName: stunner-gateway
      volumes:
      - name: stunner-config
        emptyDir: { }
      containers:
      - image: stunner-kubernetes-gateway:0.0.1
        imagePullPolicy: IfNotPresent
        name: stunner-gateway
        volumeMounts:
        - name: stunner-config
          mountPath: /etc/stunner
        args:
        - --gateway-ctlr-name=stunner.l7mp.io/gateway
      - image: l7mp/stunnerd
        imagePullPolicy: IfNotPresent
        name: stunner
        volumeMounts:
        - name: stunner-config
          mountPath: /etc/stunner
