deploy/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: stunner-gateway
  namespace: stunner
spec:
  gatewayClassName: stunner
  listeners:
  - name: udp
    protocol: UDP
    port: 3478
  - name: tcp
    protocol: TCP
    port: 3478
